# lab1

./: CMakeLists.txt
src/: arabic_digits_counter.cpp  arabic_digits_counter.h  main.cpp
